fix broken styles

--- a/www/templates/default/html/less/manager.less
+++ b/www/templates/default/html/less/manager.less
@@ -151,10 +151,6 @@
   margin-bottom: 0 !important;
 }
 
-.recurring-container {
-  display: none;
-}
-
 #recurring-type {
   min-width: 150px;
 }
